# geeps

./: .gitmodules  Dockerfile  README.md  compose.yml  geeps.code-workspace
affinity/: .gitignore  bitmaps.afdesign  kea.afdesign  symbols.afdesign  symbols.afdesign~lock~
affinity/exports/: kea_solid.dxf
affinity/exports/bmp/: foods.bmp:Zone.Identifier  smile.bmp:Zone.Identifier
affinity/exports/kea/: kea_stroke.dxf
affinity/scripts/: convert_png_to_bmp.py  pyproject.toml
docker/: README.md
firmware/: CMakeLists.txt  README.md
firmware/hints/: README.md  example.hints.txt
firmware/inc/: CMakeLists.txt
firmware/inc/app/: CMakeLists.txt  geeps_gui.hh  gui_bitmaps.hh
firmware/inc/display/: Arduino.h  CMakeLists.txt  Screen_EPD_EXT3.h  epaper.hh  hV_Font.h  hV_Font_Terminal.h  hV_Screen_Buffer.h  hV_Utilities.h
firmware/inc/gps/: CMakeLists.txt  gps_utils.hh  nmea_utils.hh  pa1616s.hh
firmware/linker_scripts/: core0_bigstack.ld
firmware/src/: CMakeLists.txt  bsp.cpp  bsp.hh  main.cpp
firmware/src/app/: CMakeLists.txt  bmp.hh  bmp_utils.hh  buttons.hh  geeps_gui.cc  geeps_gui.hh  gui_bitmaps.hh  scavenger_hunt.cpp  scavenger_hunt.hh  sd_utils.cpp  sd_utils.hh  servo.hh
firmware/src/display/: CMakeLists.txt  Screen_EPD_EXT3.cpp  Screen_EPD_EXT3.h  epaper.cc  epaper.hh  hV_Colours565.h  hV_Configuration.h  hV_Font_Terminal.cpp  hV_Screen_Buffer.cpp  hV_Utilities.cpp
firmware/src/display/arduino/: Arduino.cpp  Arduino.h  SPI.cpp  SPI.h  Wire.cpp  Wire.h
firmware/src/display/arduino/api/: String.cpp  String.h
firmware/src/display/pervasive/: Screen_EPD_EXT3.cpp  hV_HAL_Peripherals.cpp  hV_List_Screens_Legacy.h
firmware/src/gps/: CMakeLists.txt  gps_utils.cc  gps_utils.hh  nmea_utils.cc  nmea_utils.hh  pa1616s.cc  pa1616s.hh
firmware/test/: CMakeLists.txt
firmware/test/src/: test_gps.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  test_gps.cpp
