[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "John McNelly"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
